Bug 66297 - [IVB/HSW bisected] cairo-trace/(benchmark)swfdec-youtube.trace reduced by ~20%
Summary: [IVB/HSW bisected] cairo-trace/(benchmark)swfdec-youtube.trace reduced by ~20%
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-28 06:30 UTC by meng
Modified: 2013-07-01 05:42 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description meng 2013-06-28 06:30:07 UTC
System Environment:       
----------------------------------------------
Platform:  HSW/IVB
Mesa:		(master)6aabd9490c7b71d363a384935597b3e37295e61e
Xf86_video_intel:	(master)2.21.9-51-g62e42de300275a668a326357d454062221714fe8
Cairo:		(master)4d9439132de85c0f0f4d5b5a474ea7164910251e
Kernel:	(drm-intel-nightly) 51c5e63195eff27962be315b5c835cdc2fe034fb

Bug detailed description:
----------------------------------------------
cairo-trace/(benchmark)swfdec-youtube.trace reduced by ~20% on IVB/HSW.
It’s Xf86_video_intel regression, bisecting show the first bad commit is that:

commit 48028a7c923fa0d66b01e8e94d4f0742866f78ec
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 21 14:29:43 2013 +0100
    sna: Inspect availablity of render before prefering to use the GPU
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Performance on IVB
---------------------------------------
                      git-48028a7         git-71fc834
swfdec-youtube.trace     0.385               0.30
  

Reproduce steps:
---------------------------------------------
1. xinit&
2.vblank_mode=0 CAIRO_TEST_TARGET=xlib ./cairo-perf-trace -i 12 /home/cairo-traces/benchmark/swfdec-youtube.trace
Comment 1 Chris Wilson 2013-06-28 07:57:44 UTC
Confirmed; looks to be a bit of a puzzler.
Comment 2 Chris Wilson 2013-06-28 10:27:20 UTC
commit e979d32bb71fef7341ceb9c2b2e80c6dfa50a7b3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 28 10:59:23 2013 +0100

    sna/gen2+: Consider precision in render operation placement
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66297
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 meng 2013-07-01 00:50:10 UTC
Verified it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.